Fix overflow between project title and user status header

--- a/src/RX.Nyss.Web/ClientApp/src/components/layout/Header.module.scss
+++ b/src/RX.Nyss.Web/ClientApp/src/components/layout/Header.module.scss
@@ -3,6 +3,7 @@
     align-items: center;
     padding-left: 35px;
     padding-right: 35px;
+    justify-content: flex-end;
 
     .placeholder {
         flex: 1;
